--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
         <h1>My Profile</h1>  
         <nav>  
             <ul>  
-                <li>About Me</li>  
-                <li>Hobbies</li>  
-                <li>Contact</li>  
+                <li><a href="#about-me">About Me</a></li>  
+                <li><a href="#hobbies">Hobbies</a></li>  
+                <li><a href="#contact">Contact</a></li>  
             </ul>  
         </nav>  
     </header>  
 
-    <section>  
+    <section id="about-me">  
         <h2>About Me</h2>  
-        <p>Hello! I'm Onyeizugbo stanley, and I enjoy exploring new ideas and activities.</p>  
+        <p>Hello! I'm Onyeizugbo Stanley, and I enjoy exploring new ideas and activities.</p>  
         <img src="https://profilepictures.com/150" alt="my profile picture">  
     </section>  
 
-    <section>  
+    <section id="hobbies">  
         <h2>Hobbies/Interests</h2>  
         <ul>  
             <li>Reading</li>  
@@ -33,7 +33,7 @@
         </ul>  
     </section>  
 
-    <footer>  
+    <footer id="contact">  
         <h2>Contact</h2>  
         <p>Email: ifeanyistanley82@gmail.com</p>  
         <p>Twitter: @stan_officials</p>  
