--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
         <h1>My Profile</h1>  
         <nav>  
             <ul>  
-                <li><a href="#about-me">About Me</a></li>  
-                <li><a href="#hobbies">Hobbies</a></li>  
-                <li><a href="#contact">Contact</a></li>  
+                <li>About Me</li>  
+                <li>Hobbies</li>  
+                <li>Contact</li>  
             </ul>  
         </nav>  
     </header>  
 
     <section id="about-me">  
-        <h2>About Me</h2>  
+        <h2>My Bio</h2>  
         <p>Hello! I'm Onyeizugbo Stanley, and I enjoy exploring new ideas and activities.</p>  
-        <img src="https://profilepictures.com/150" alt="my profile picture">  
+        <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FPastor&psig=AOvVaw0ArZBJZxnrLVYKEliFy62u&ust=1742871096939000&source=images&cd=vfe&opi=89978449&ved=2ahUKEwiP5Z_22qGMAxUsdEEAHRNsBokQjRx6BAgAEBk" alt="my profile picture">  
     </section>  
 
     <section id="hobbies">  
