--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         <h1>My Profile</h1>  
         <nav>  
             <ul>  
-                <li>About Me</li>  
-                <li>Hobbies</li>  
-                <li>Contact</li>  
+                <li><a href="#about-me">About Me</a></li>  
+                <li><a href="#hobbies">Hobbies</a></li>  
+                <li><a href="#contact">Contact</a></li>  
             </ul>  
         </nav>  
     </header>  
