--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section id="about-me">  
         <h2>My Bio</h2>  
         <p>Hello! I'm Onyeizugbo Stanley, and I enjoy exploring new ideas and activities.</p>  
-        <img src="https://scontent.flos1-1.fna.fbcdn.net/v/t39.30808-6/482322265_2680968242112071_5777290922933022296_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeHp3WOwwyQEXk0aE56xZwhQN0zUKQeRGqc3TNQpB5Eap3NCRrVk1awOOoknO7yXmf9hkRsh6bgn9sHWqYLOJ9-R&_nc_ohc=vh28jacj4OQQ7kNvgEOTI9p&_nc_oc=Adk1-q7oqUuJ65QCxZJl7ESbuEOCOnA0aZJFFs2YeOM5UaTnbrrfsx__WjA4fo6Zq10&_nc_zt=23&_nc_ht=scontent.flos1-1.fna&_nc_gid=BoONoKBGvUySidSbbUewPg&oh=00_AYHRbNa6pQE1SDrksn3LRkV2d3PGauHfl_UETmK0-d3_Ng&oe=67E68D60" alt="my profile picture">  
+        <img src="https://scontent.flos1-1.fna.fbcdn.net/v/t39.30808-6/482322265_2680968242112071_5777290922933022296_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeHp3WOwwyQEXk0aE56xZwhQN0zUKQeRGqc3TNQpB5Eap3NCRrVk1awOOoknO7yXmf9hkRsh6bgn9sHWqYLOJ9-R&_nc_ohc=vh28jacj4OQQ7kNvgEOTI9p&_nc_oc=Adk1-q7oqUuJ65QCxZJl7ESbuEOCOnA0aZJFFs2YeOM5UaTnbrrfsx__WjA4fo6Zq10&_nc_zt=23&_nc_ht=scontent.flos1-1.fna&_nc_gid=BoONoKBGvUySidSbbUewPg&oh=00_AYHRbNa6pQE1SDrksn3LRkV2d3PGauHfl_UETmK0-d3_Ng&oe=67E68D60" alt="A photograph of Onyeizugbo Stanley smiling.">  
     </section>  
 
     <section id="hobbies">  
