--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         <ul>  
             <li>Reading</li>  
             <li>Traveling</li>  
-            <li>Coding</li>  
+            <li>Coding</li>
+            <li>swimming</li>
+            <li>travelling</li>  
         </ul>  
     </section>  
 
