--- a/index.html
+++ b/index.html
@@ -3,43 +3,23 @@
 <head>  
     <meta charset="UTF-8">  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-    <title>My Profile</title>  
+    <link rel="stylesheet" href="styles.css">  
+    <title>About Me - Cards</title>  
 </head>  
 <body>  
-
-    <header>  
-        <h1>My Profile</h1>  
-        <nav>  
-            <ul>  
-                <li><a href="#about-me">About Me</a></li>  
-                <li><a href="#hobbies">Hobbies</a></li>  
-                <li><a href="#contact">Contact</a></li>  
-            </ul>  
-        </nav>  
-    </header>  
-
-    <section id="about-me">  
-        <h2>My Bio</h2>  
-        <p>Hello! I'm Onyeizugbo Stanley, and I enjoy exploring new ideas and activities.</p>  
-        <img src="https://scontent.flos1-1.fna.fbcdn.net/v/t39.30808-6/482322265_2680968242112071_5777290922933022296_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeHp3WOwwyQEXk0aE56xZwhQN0zUKQeRGqc3TNQpB5Eap3NCRrVk1awOOoknO7yXmf9hkRsh6bgn9sHWqYLOJ9-R&_nc_ohc=vh28jacj4OQQ7kNvgEOTI9p&_nc_oc=Adk1-q7oqUuJ65QCxZJl7ESbuEOCOnA0aZJFFs2YeOM5UaTnbrrfsx__WjA4fo6Zq10&_nc_zt=23&_nc_ht=scontent.flos1-1.fna&_nc_gid=BoONoKBGvUySidSbbUewPg&oh=00_AYHRbNa6pQE1SDrksn3LRkV2d3PGauHfl_UETmK0-d3_Ng&oe=67E68D60" alt="A photograph of Onyeizugbo Stanley smiling.">  
-    </section>  
-
-    <section id="hobbies">  
-        <h2>Hobbies/Interests</h2>  
-        <ul>  
-            <li>Reading</li>  
-            <li>Traveling</li>  
-            <li>Coding</li>
-            <li>swimming</li>
-            <li>travelling</li>  
-        </ul>  
-    </section>  
-
-    <footer id="contact">  
-        <h2>Contact</h2>  
-        <p>Email: ifeanyistanley82@gmail.com</p>  
-        <p>Twitter: @stan_officials</p>  
-    </footer>  
-
+    <div class="container">  
+        <div class="card">  
+            <h2>About Me 1</h2>  
+            <p>I'm passionate about web development and enjoy learning new technologies.</p>  
+        </div>  
+        <div class="card">  
+            <h2>About Me 2</h2>  
+            <p>I love hiking and spending time in nature during my free time.</p>  
+        </div>  
+        <div class="card">  
+            <h2>About Me 3</h2>  
+            <p>I'm an avid reader, with a special interest in science fiction novels.</p>  
+        </div>  
+    </div>  
 </body>  
 </html>  
